infer/tests/codetoanalyze/cpp/errors/conditional/lvalue_conditional.cpp
../../frontend/conditional/lvalue_conditional.cpp